tests/miniJava/neg/006798_mutation.MiniJava
class if java { public static void Main ( String [ ] java ) { { } } }
